Fixing spacing.

--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ th {
 
 #news {
     width: 45%;
-    padding-right: 35px;
+    padding-right: 75px;
     border-right: 1px solid #E5E8E9;
     margin-left: 5%;
     float: left;
